<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".MainActivity">



    <EditText
        android:inputType="number"
        android:id="@+id/edit_distancia"
        android:hint="@string/distancia"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:layout_gravity="center_horizontal"
        android:text="@string/total_de_quilometros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edit_preco"
        android:hint="@string/preco"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:layout_gravity="center_horizontal"
        android:text="@string/preco_por_litro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edit_autonomia"
        android:hint="@string/autonomia"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:layout_gravity="center_horizontal"
        android:text="@string/kms_por_litro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="48dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/seu_gasto_total_sera_de"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text_valor_total"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/valor_total"
        android:textSize="38sp"
        android:textColor="#673AB7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/button_calcular"
        android:layout_marginTop="16dp"
        android:text="@string/calcular"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="20sp"/>


</LinearLayout>